--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,12 @@ eframe = { version = "0.33", default-features = false, features = [
     "persistence",
 ] }
 log = "0.4"
-egui_term = { git = "https://github.com/Harzu/egui_term" }
+egui_term = { path = "../egui_term" }
 wgpu = "27"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dirs = "5.0"
+rfd = "0.14"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11.6"
