--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,32 @@ image = "0.24"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11.6"
 
+[build-dependencies]
+cargo-deb = "2"
+
 [features]
 default = []
 x11 = ["eframe/x11"]
 wayland = ["eframe/wayland"]
+
+[package.metadata.deb]
+name = "yaaa"
+maintainer = "Oleg Orlov <orelcokolov@gmail.com>"
+copyright = "Copyright (C) 2025 Oleg Orlov."
+extended-description = """\
+Multi-Agent Terminal - Yet Another AI Agent - \
+Terminal application with AI agent support.
+"""
+section = "utils"
+priority = "optional"
+assets = [
+    ["target/release/yaaa", "/usr/bin/yaaa", "755"],
+    ["debian/yaaa.desktop", "/usr/share/applications/yaaa.desktop", "644"],
+    ["debian/icons/16.png", "/usr/share/icons/hicolor/16x16/apps/yaaa.png", "644"],
+    ["debian/icons/32.png", "/usr/share/icons/hicolor/32x32/apps/yaaa.png", "644"],
+    ["debian/icons/48.png", "/usr/share/icons/hicolor/48x48/apps/yaaa.png", "644"],
+    ["debian/icons/64.png", "/usr/share/icons/hicolor/64x64/apps/yaaa.png", "644"],
+    ["debian/icons/128.png", "/usr/share/icons/hicolor/128x128/apps/yaaa.png", "644"],
+    ["debian/icons/256.png", "/usr/share/icons/hicolor/256x256/apps/yaaa.png", "644"],
+    ["debian/postinst", "/DEBIAN/postinst", "755"],
+]
