--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ eframe = { version = "0.33", default-features = false, features = [
     "persistence",
 ] }
 log = "0.4"
-egui_term = { git = "https://github.com/Harzu/egui_term" }
+egui_term = { path = "../egui_term" }
 wgpu = "27"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
