--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "yaaa"
 version = "0.1.2"
 edition = "2021"
-description = "Multi-Agent Terminal - Yet Another AI Agent"
+ description = "Yet Another AI Agent"
 
 [dependencies]
 egui = "0.33"
