--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,11 +24,14 @@ jobs:
       - name: Build Release
         run: cargo build --release --locked
 
+      - name: Build Debian Package
+        run: cargo deb
+
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
-          files: target/release/yaaa
+          files: target/debian/*.deb
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
