Fix github actions cargo deb

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
           profile: minimal
           toolchain: stable
 
+      - name: Install cargo-deb
+        run: cargo install cargo-deb
+
       - name: Build Release
         run: cargo build --release --locked
 
