--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yaaa"
-version = "0.3.4"
+version = "0.3.6"
 edition = "2021"
  description = "Yet Another AI Agent"
 
@@ -13,8 +13,8 @@ eframe = { version = "0.33", default-features = false, features = [
     "persistence",
 ] }
 log = "0.4"
- egui_term = { git = "https://github.com/OrelSokolov/egui_term.git" }
-wgpu = "27"
+ egui_term = { git = "https://github.com/OrelSokolov/egui_term.git", rev = "a2468e5913583aab1303be375dbe442bbbfa0240" }
+ wgpu = "27"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "5.0"
