--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ eframe = { version = "0.33", default-features = false, features = [
 ] }
 log = "0.4"
  egui_term = { git = "https://github.com/OrelSokolov/egui_term.git", rev = "91eb799" }
+ arboard = "3.2"
  wgpu = "27"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
