--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ dirs = "5.0"
 rfd = "0.14"
 image = "0.24"
 alacritty_terminal = "0.25.1"
+rust-fontconfig = "1.2.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11.6"
