--- a/.github/workflows/ppa.yml
+++ b/.github/workflows/ppa.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install cargo-deb
         run: cargo install cargo-deb
@@ -43,7 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup APT Repository on GitHub Pages
-        uses: smeinecke/apt-repo-action@v2.2
+        uses: smeinecke/apt-repo-action@v2
         with:
           github_token: ${{ github.token }}
           repo_supported_arch: |
